feat: Update branding to Sundap Properties with sun emoji
- Change title to '☀️ Sundap Properties'
- Update package.json name to 'sundap-properties'
- Update Layout component with sun emoji branding
- Add custom favicon with sun emoji
- Update environment variables with new app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "name": "User Management and Property Wizard",
+      "name": "sundap-properties",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
